--- a/src/component/6-portfolio/PortfolioStyle.scss
+++ b/src/component/6-portfolio/PortfolioStyle.scss
@@ -3,7 +3,7 @@
 
   .progress {
     position: sticky;
-    top: 0px;
+    top: 0;
     left: 0;
     padding-top: 20px;
     text-align: center;
@@ -27,6 +27,8 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    padding-top:10px ;
+    
 
     .wrapper {
       
@@ -74,14 +76,18 @@
           font-family: var(--font-base);
          
         }
-
+        a{
+          display: flex;
+          width: fit-content;
+        }
+    
         button {
           background-color: orange;
           border: none;
           border-radius: 10px;
           padding: 10px;
-          margin-top: 20px;
           width: 200px;
+          margin-top: 20px;
           cursor: pointer;
           font-family: var(--font-base);
         }
